--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,14 +6,14 @@
 #    By: sichoi <sichoi@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/21 18:35:07 by sichoi            #+#    #+#              #
-#    Updated: 2022/07/23 19:02:46 by sichoi           ###   ########.fr        #
+#    Updated: 2022/07/25 17:03:45 by sichoi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = animal
+NAME = brain
 
 CC = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -MD
 
 GREEN = \033[0;32m
 RED = \033[0;31m
@@ -24,11 +24,11 @@ FUNC = main\
 		Animal\
 		Dog\
 		Cat\
-		WrongAnimal\
-		WrongCat\
+		Brain\
 
 SRC = $(addsuffix .cpp, $(FUNC))
 OBJ = $(addsuffix .o, $(FUNC))
+DEP = $(addsuffix .d, $(FUNC))
 
 %.o : %.cpp
 	@echo "$(NAME): $(GREEN) compiling... $< $(CHECK) $(RESET)"
@@ -41,11 +41,15 @@ $(NAME) : $(OBJ)
 all : $(NAME)
 
 clean :
-	@rm -f $(OBJ)
+	@rm -f $(OBJ) $(DEP)
 	@echo "$(NAME): $(RED) object files were deleted $(RESET)"
 
 fclean : clean
 	@rm -f $(NAME)
 	@echo "$(NAME): $(RED) $(NAME) was deleted $(RESET)"
 
-re : fclean all
+re :
+	@$(MAKE) fclean
+	@$(MAKE) all
+
+-include $(DEP)
